[package]
name = "crypto-trading-bot"
version = "0.2.0"
authors = ["Michael Wong <mi.wong.mt@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "0.2.24", features = ["full"] }
sqlx = { version = "0.4.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
    "decimal",
] }
lazy_static = "1.4.0"
crossbeam = "0.8.0"
typetag = "0.1.7"

[profile.release]
debug = true
